Using public docker repo

--- a/knative-service.yaml
+++ b/knative-service.yaml
@@ -9,7 +9,7 @@ spec:
       revisionTemplate:
         spec:
           container:
-            image: docker-registry.default.svc:5000/kabanero/appsody-hello-worlds
+            image: dnastacio/appsody-hello-worlds
             imagePullPolicy: Always
             ports:
             - containerPort: 9080
