--- a/knative-service.yaml
+++ b/knative-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: serving.knative.dev/v1alpha1
 kind: Service
 metadata:
-  namespace: appsody-project
+  namespace: kabanero
   name: appsody-hello-world
 spec:
   runLatest:
@@ -9,7 +9,7 @@ spec:
       revisionTemplate:
         spec:
           container:
-            image: docker-registry.default.svc:5000/kabanero/appsody-hello-world
+            image: dnastacio/appsody-hello-world
             imagePullPolicy: Always
             ports:
             - containerPort: 9080
